syntax = "proto3";

package UnityComm;

// Interface exported by the server.
service ArmComm {
  
	rpc SendArmComm (ServoValues) returns (Recieved) {}

}

// Points are represented as latitude-longitude pairs in the E7 representation
// (degrees multiplied by 10**7 and rounded to the nearest integer).
// Latitudes should be in the range +/- 90 degrees and longitude should be in
// the range +/- 180 degrees (inclusive).
message ServoValues {
  uint32 m1 = 1;
  uint32 m2 = 2;
  uint32 m3 = 3;
  uint32 m4 = 4;
  uint32 m5 = 5;
  uint32 m6 = 6;
  uint32 step = 7;
}

message Recieved {
  bool replymessage = 1;
}